feat(API-2): Estruturação final com autenticação via keycloak
